# HOCkeR

./: .gitignore  LICENSE  README.md  pyproject.toml
src/hocker/: HOCRCombiner.py  __init__.py  hocker.py
src/hocker_package_lucaswarwick02/: hocker.py
tests/: page.html  sample.hocr
